@@ -15,12 +15,24 @@ java {
     }
 }
 
+tasks.withType<JavaCompile> {
+    options.compilerArgs.addAll(listOf("--enable-preview"))
+}
+
+tasks.withType<JavaExec> {
+    jvmArgs("--enable-preview")
+}
+
+tasks.withType<Test> {
+    jvmArgs("--enable-preview")
+}
+
 repositories {
     mavenCentral()
 }
 
 dependencies {
-    implementation("io.github.higher-kinded-j:hkj-core:0.3.0")
-    annotationProcessor("io.github.higher-kinded-j:hkj-processor-plugins:0.3.0")
+    implementation("io.github.higher-kinded-j:hkj-core:0.3.4")
+    annotationProcessor("io.github.higher-kinded-j:hkj-processor-plugins:0.3.4")
 }
 
